massive cleanup / reorg.
git-svn-id: svn://drago.cc/yap/trunk@7 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/yap/CMakeLists.txt
+++ b/yap/CMakeLists.txt
@@ -1,12 +1,22 @@
 
 project(yap)
 add_library(yap 
+    yapBlock.h
+    yapBlock.c
+    yapContext.h
+    yapContext.c
+    yapFrame.h
+    yapFrame.c
+    yapModule.h
+    yapModule.c
+    yapOp.h
+    yapOp.c
     yapTypes.h
     yapTypes.c
-    yapVM.h
-    yapVM.c
-    yapCore.h
-    yapCore.c
     yapValue.h
     yapValue.c
+    yapVariable.h
+    yapVariable.c
+    yapVM.h
+    yapVM.c
 )
