building now requires re2c
git-svn-id: svn://drago.cc/yap/trunk@13 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/yap/CMakeLists.txt
+++ b/yap/CMakeLists.txt
@@ -18,6 +18,25 @@ MACRO(add_lemon_files _sources )
    ENDFOREACH (_current_FILE)
 ENDMACRO(add_lemon_files)
 
+MACRO(add_re2c_files _sources )
+    FOREACH (_current_FILE ${ARGN})
+      GET_FILENAME_COMPONENT(_in ${_current_FILE} ABSOLUTE)
+      GET_FILENAME_COMPONENT(_basename ${_current_FILE} NAME_WE)
+
+      set(_out ${CMAKE_CURRENT_SOURCE_DIR}/${_basename}.re.c)
+
+      ADD_CUSTOM_COMMAND(
+         OUTPUT ${_out}
+         COMMAND re2c
+         ARGS
+         ${_in} > ${_out}
+         DEPENDS ${_in}
+      )
+
+      SET(${_sources} ${${_sources}} ${_out})
+   ENDFOREACH (_current_FILE)
+ENDMACRO(add_re2c_files)
+
 project(yap)
 set(yap_src
     yapBlock.h
@@ -26,7 +45,6 @@ set(yap_src
     yapContext.c
     yapFrame.h
     yapFrame.c
-    yapLexer.re.c
     yapModule.h
     yapModule.c
     yapOp.h
@@ -41,5 +59,6 @@ set(yap_src
     yapVM.c
 )
 add_lemon_files(yap_src yapTokenizer.y)
+add_re2c_files(yap_src yapLexer.re)
 add_library(yap ${yap_src})
 
