big changes, breaking stuffs
git-svn-id: svn://drago.cc/yap/trunk@20 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/yap/CMakeLists.txt
+++ b/yap/CMakeLists.txt
@@ -51,10 +51,12 @@ set(yap_src
     yapFrame.c
     yapLexer.c
     yapLexer.h
+    yapLexer.re
     yapModule.h
     yapModule.c
     yapOp.h
     yapOp.c
+    yapParser.y
     yapTypes.h
     yapTypes.c
     yapValue.h
