HUGE MILESTONES OF AWESOMES
git-svn-id: svn://drago.cc/yap/trunk@21 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/yap/CMakeLists.txt
+++ b/yap/CMakeLists.txt
@@ -43,6 +43,8 @@ project(yap)
 set(yap_src
     yapBlock.h
     yapBlock.c
+    yapCode.h
+    yapCode.c
     yapCompiler.h
     yapCompiler.c
     yapContext.h
