all kinds of broken
git-svn-id: svn://drago.cc/yap/trunk@44 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/yap/CMakeLists.txt
+++ b/yap/CMakeLists.txt
@@ -59,6 +59,8 @@ set(yap_src
     yapOp.h
     yapOp.c
     yapParser.y
+    yapSyntax.h
+    yapSyntax.c
     yapTypes.h
     yapTypes.c
     yapValue.h
