Moved Disasm and Dot stuff to their own files Created new file prefix indicating "yap extras" -- things not needed for base system to work
git-svn-id: svn://drago.cc/yap/trunk@52 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/yap/CMakeLists.txt
+++ b/yap/CMakeLists.txt
@@ -69,6 +69,10 @@ set(yap_src
     yapVariable.c
     yapVM.h
     yapVM.c
+    yapxDot.h
+    yapxDot.c
+    yapxDisasm.h
+    yapxDisasm.c
 )
 add_lemon_files(yap_src yapParser.y)
 add_re2c_files(yap_src yapLexer.re)
