* Dict support * Made line endings consistent
git-svn-id: svn://drago.cc/yap/trunk@58 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/yap/CMakeLists.txt
+++ b/yap/CMakeLists.txt
@@ -49,6 +49,8 @@ set(yap_src
     yapCompiler.c
     yapContext.h
     yapContext.c
+    yapDict.h
+    yapDict.c
     yapFrame.h
     yapFrame.c
     yapLexer.c
