object rename complete
git-svn-id: svn://drago.cc/yap/trunk@62 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/yap/CMakeLists.txt
+++ b/yap/CMakeLists.txt
@@ -49,8 +49,8 @@ set(yap_src
     yapCompiler.c
     yapContext.h
     yapContext.c
-    yapDict.h
-    yapDict.c
+    yapObject.h
+    yapObject.c
     yapFrame.h
     yapFrame.c
     yapLexer.c
