* move intrinsics (push, object, etc) to its own C file
git-svn-id: svn://drago.cc/yap/trunk@74 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/yap/CMakeLists.txt
+++ b/yap/CMakeLists.txt
@@ -53,6 +53,8 @@ set(yap_src
     yapObject.c
     yapFrame.h
     yapFrame.c
+    yapIntrinsics.c
+    yapIntrinsics.h
     yapLexer.c
     yapLexer.h
     yapLexer.re
