example game code, fun stuff
git-svn-id: svn://drago.cc/yap/trunk@97 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,7 @@ add_subdirectory(lemon)
 add_subdirectory(yap)
 add_subdirectory(yaptest)
 add_subdirectory(yapconsole)
+if(APPLE)
+    add_subdirectory(yapgame)
+endif()
 
