* moved array code to its own file * added basic hash table code * yapObject uses hash table * dict() is now an alias for object(), and accepts key/value init arguments * fat comma support
git-svn-id: svn://drago.cc/yap/trunk@100 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/yap/CMakeLists.txt
+++ b/yap/CMakeLists.txt
@@ -41,6 +41,8 @@ ENDMACRO(add_re2c_files)
 
 project(yap)
 set(yap_src
+    yapArray.h
+    yapArray.c
     yapBlock.h
     yapBlock.c
     yapChunk.h
@@ -55,6 +57,8 @@ set(yap_src
     yapObject.c
     yapFrame.h
     yapFrame.c
+    yapHash.h
+    yapHash.c
     yapIntrinsics.c
     yapIntrinsics.h
     yapLexer.c
