Completely rearranging everything, step one
git-svn-id: svn://drago.cc/yap/trunk@118 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,6 @@ if(MSVC)
     set(CMAKE_C_FLAGS /wd4996)
 endif()
 
-include_directories(${CMAKE_SOURCE_DIR}/yap)
-
 if(APPLE)
     add_definitions(-DPLATFORM_OSX)
 else()
@@ -25,11 +23,7 @@ else()
     endif()
 endif()
 
-add_subdirectory(lemon)
+add_subdirectory(external)
 add_subdirectory(yap)
-add_subdirectory(yaptest)
-add_subdirectory(yapconsole)
-if(APPLE)
-    add_subdirectory(yapgame)
-endif()
+add_subdirectory(demos)
 
