JSON parsing support (JSON generation is next)
git-svn-id: svn://drago.cc/yap/trunk@119 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/demos/yapconsole/CMakeLists.txt
+++ b/demos/yapconsole/CMakeLists.txt
@@ -1,18 +1,19 @@
 
 project(yapconsole C)
 
-if(UNIX)
-#    add_definitions(-DHAVE_READLINE=1)
-endif()
-
 include_directories (
     ${yap_SOURCE_DIR}/core
     ${yap_SOURCE_DIR}/intrinsics
     ${yap_SOURCE_DIR}/modules
     ${yap_SOURCE_DIR}/extras
 )
+
 add_executable(yapconsole
     main.c
 )
 target_link_libraries (yapconsole yap)
+
+if(YAP_MOD_JSON)
+    target_link_libraries (yapconsole cjson)
+endif()
 
