--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required(VERSION 2.6)
 
 project(yap)
 
+set(YAP_MOD_JSON "ON" CACHE BOOL "Enables JSON support.")
+if(YAP_MOD_JSON)
+    add_definitions(-DYAP_MOD_JSON=1)
+endif()
+
 if(UNIX)
     set(CMAKE_CXX_FLAGS "-g")
     set(CMAKE_C_FLAGS "-g")
