--- a/demos/yaptest/CMakeLists.txt
+++ b/demos/yaptest/CMakeLists.txt
@@ -1,13 +1,19 @@
 
 project(yaptest C)
+
 include_directories (
     ${yap_SOURCE_DIR}/core
     ${yap_SOURCE_DIR}/intrinsics
     ${yap_SOURCE_DIR}/modules
     ${yap_SOURCE_DIR}/extras
 )
+
 add_executable(yaptest
     main.c
 )
 target_link_libraries (yaptest yap)
+
+if(YAP_MOD_JSON)
+    target_link_libraries (yaptest cjson)
+endif()
 
