fix cmake oversights, correct ySize definition
git-svn-id: svn://drago.cc/yap/trunk@120 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/yap/CMakeLists.txt
+++ b/yap/CMakeLists.txt
@@ -5,7 +5,7 @@ MACRO(add_lemon_files _sources )
       GET_FILENAME_COMPONENT(_basename ${_current_FILE} NAME_WE)
 
       set(_out ${CMAKE_CURRENT_SOURCE_DIR}/core/${_basename}.c)
-      set(_template ${CMAKE_CURRENT_SOURCE_DIR}/${_basename}.lt)
+      set(_template ${CMAKE_CURRENT_SOURCE_DIR}/core/${_basename}.lt)
 
       ADD_CUSTOM_COMMAND(
          OUTPUT ${_out}
