line endings cleanup (thanks MS), disasm and dot extras are now optional
git-svn-id: svn://drago.cc/yap/trunk@121 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,24 @@ cmake_minimum_required(VERSION 2.6)
 
 project(yap)
 
-set(YAP_MOD_JSON "ON" CACHE BOOL "Enables JSON support.")
-if(YAP_MOD_JSON)
-    add_definitions(-DYAP_MOD_JSON=1)
+# ----------------------------------------------------------------------------
+
+set(YAP_ENABLE_MOD_JSON "ON" CACHE BOOL "Enables JSON support.")
+if(YAP_ENABLE_MOD_JSON)
+    add_definitions(-DYAP_ENABLE_MOD_JSON=1)
 endif()
+
+set(YAP_ENABLE_EXT_DISASM "ON" CACHE BOOL "Enables Yap disassembly support.")
+if(YAP_ENABLE_EXT_DISASM)
+    add_definitions(-DYAP_ENABLE_EXT_DISASM=1)
+endif()
+
+set(YAP_ENABLE_EXT_DOT "ON" CACHE BOOL "Enables Yap Graphviz (Dot) output support.")
+if(YAP_ENABLE_EXT_DOT)
+    add_definitions(-DYAP_ENABLE_EXT_DOT=1)
+endif()
+
+# ----------------------------------------------------------------------------
 
 if(UNIX)
     set(CMAKE_CXX_FLAGS "-g")
