--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
 add_subdirectory(lemon)
-if(YAP_MOD_JSON)
+if(YAP_ENABLE_MOD_JSON)
     add_subdirectory(cJSON)
 endif()
