added ability to set the path to re2c
git-svn-id: svn://drago.cc/yap/trunk@123 93c65507-1ebd-42ea-85eb-edb014e0270b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ if(YAP_ENABLE_EXT_DOT)
     add_definitions(-DYAP_ENABLE_EXT_DOT=1)
 endif()
 
+set(YAP_RE2C_PATH "re2c" CACHE STRING "Path to re2c executable.")
+
 # ----------------------------------------------------------------------------
 
 if(UNIX)
