--- a/demos/yapconsole/CMakeLists.txt
+++ b/demos/yapconsole/CMakeLists.txt
@@ -1,3 +1,9 @@
+# ---------------------------------------------------------------------------
+#                   Copyright Joe Drago 2010 - 2011.
+#         Distributed under the Boost Software License, Version 1.0.
+#            (See accompanying file LICENSE_1_0.txt or copy at
+#                  http:#www.boost.org/LICENSE_1_0.txt)
+# ---------------------------------------------------------------------------
 
 project(yapconsole C)
 
@@ -12,4 +18,3 @@ add_executable(yapconsole
     main.c
 )
 target_link_libraries (yapconsole yap ${YAP_MOD_LIBS})
-
