--- a/yap/CMakeLists.txt
+++ b/yap/CMakeLists.txt
@@ -1,3 +1,9 @@
+# ---------------------------------------------------------------------------
+#                   Copyright Joe Drago 2010 - 2011.
+#         Distributed under the Boost Software License, Version 1.0.
+#            (See accompanying file LICENSE_1_0.txt or copy at
+#                  http:#www.boost.org/LICENSE_1_0.txt)
+# ---------------------------------------------------------------------------
 
 MACRO(add_lemon_files _sources )
     FOREACH (_current_FILE ${ARGN})
@@ -131,4 +137,3 @@ add_library(yap
     ${yap_modules}
     ${yap_extras}
 )
-
