* Added some simple coverage support with gcov/lcov * Changed re2c cmdline to avoid tagging #lines with <stdout> * Reordered library inclusion for linking's sake * Started toying with ref counts (verymuch not implemented)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,7 @@ project(yap)
 
 # ----------------------------------------------------------------------------
 
-set(YAP_MOD_LIBS)
-
-if(UNIX)
-    list(APPEND YAP_MOD_LIBS m)
-endif()
+set(YAP_MOD_LIBS ";")
 
 set(YAP_ENABLE_MOD_JSON "ON" CACHE BOOL "Enables JSON support.")
 if(YAP_ENABLE_MOD_JSON)
@@ -34,12 +30,34 @@ endif()
 
 set(YAP_RE2C_PATH "re2c" CACHE STRING "Path to re2c executable.")
 
+if(UNIX)
+    list(APPEND YAP_MOD_LIBS m)
+endif()
+
 # ----------------------------------------------------------------------------
 
 if(UNIX)
     set(CMAKE_CXX_FLAGS "-g")
     set(CMAKE_C_FLAGS "-g")
+
+    set(COVERAGE OFF CACHE BOOL "Enable coverage")
+    if(COVERAGE)
+        MESSAGE(STATUS "Coverage enabled.")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage -O0")
+
+        add_custom_target(covclear
+            COMMAND lcov -z -d ${CMAKE_BINARY_DIR} -o ${CMAKE_BINARY_DIR}/yap.info
+        )
+        add_custom_target(covgen
+            COMMAND lcov -c -d ${CMAKE_BINARY_DIR} -o ${CMAKE_BINARY_DIR}/yap.info
+            COMMAND cmake -E make_directory ${CMAKE_BINARY_DIR}/coverage
+            COMMAND genhtml --highlight --legend --output-directory ${CMAKE_BINARY_DIR}/coverage ${CMAKE_BINARY_DIR}/yap.info
+        )
+    else()
+        MESSAGE(STATUS "Coverage disabled.")
+    endif()
 endif()
+
 
 if(MSVC)
     set(CMAKE_C_FLAGS /wd4996)
