minor cleanup, moved defines to cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,11 @@ if(UNIX)
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage -O0")
         set(COVERAGE_HTML_OUTPUT_DIR "${CMAKE_BINARY_DIR}/coverage" CACHE STRING "Coverage HTML output")
         MESSAGE(STATUS "Coverage HTML Output: ${COVERAGE_HTML_OUTPUT_DIR}")
+
+        add_definitions(-DYAP_TRACE_MEMORY=1)
+        add_definitions(-DYAP_TRACE_MEMORY_STATS_ONLY=1)
+        add_definitions(-DYAP_TRACE_EXECUTION=1)
+        add_definitions(-DYAP_TRACE_REFS=1)
     else()
         MESSAGE(STATUS "Coverage disabled.")
     endif()
