Fix array push refcounts, force docs to build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,7 +113,7 @@ foreach(dsrc ${DOCSRC})
 endforeach()
 
 add_custom_target(docs
-    DEPENDS ${DOCTXT}
+    ALL DEPENDS ${DOCTXT}
 )
 
 if(COVERAGE)
