beginning cleanup of regex module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,9 @@ if(EUREKA_ENABLE_MOD_JSON)
     list(APPEND EUREKA_COMMON_LIBS cjson)
 endif()
 
-set(EUREKA_ENABLE_MOD_PCRE "ON" CACHE BOOL "Enables PCRE support.")
-if(EUREKA_ENABLE_MOD_PCRE)
-    add_definitions(-DEUREKA_ENABLE_MOD_PCRE=1 -DPCRE_STATIC=1)
+set(EUREKA_ENABLE_MOD_REGEX "ON" CACHE BOOL "Enables PCRE support.")
+if(EUREKA_ENABLE_MOD_REGEX)
+    add_definitions(-DEUREKA_ENABLE_MOD_REGEX=1 -DPCRE_STATIC=1)
     list(APPEND EUREKA_COMMON_LIBS pcre)
 endif()
 
